--- a/enrichpdf/templates/default/enrichpdf.erb
+++ b/enrichpdf/templates/default/enrichpdf.erb
@@ -21,9 +21,9 @@ do_start()
 {
         if [ ! -f "$LOCK_FILE" ] ; then
                 echo -n $"Starting $SERVER: "
-                runuser -l "$USER" -c "$DAEMON $SERVER >> $LOG_FILE &" && echo_success || echo_failure
+                daemonize -u $USER -l $LOCK_FILE  $DAEMON $SERVER  && echo_success || echo_failure
                 RETVAL=$?
-                echo `ps ax | grep node | grep $SERVER |cut -d " " -f 1` > $PID_FILE
+                echo `ps ax | grep node | grep $SERVER |cut -d " " -f 2` > $PID_FILE
 		echo
                 [ $RETVAL -eq 0 ] && touch $LOCK_FILE
         else
@@ -40,13 +40,19 @@ do_start()
 }
 do_stop()
 {
-        echo -n $"Stopping $SERVER: "
-        pid=`cat $PID_FILE`
-        kill -9 $pid > /dev/null 2>&1 && echo_success || echo_failure
-        RETVAL=$?
-        echo
-        [ $RETVAL -eq 0 ] && rm -f $LOCK_FILE $PID_FILE
+        if [ ! -f "$PID_FILE" ]; then
+            echo $SERVER is not running
+            RETVAL=1
+        else
+            echo -n $"Stopping $SERVER: "
+            pid=`cat $PID_FILE`
+            kill -9 $pid > /dev/null 2>&1 && echo_success || echo_failure
+            RETVAL=$?
+            echo
+            [ $RETVAL -eq 0 ] && rm -f $LOCK_FILE $PID_FILE
+        fi
 }
+
 do_zap()
 {
         echo  -n $"Resetting to stopped state"
